--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,4 @@ before_install:
   - docker build -t ragssb/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ragssb/docker-react npm run test -- --coverage
-  
-
+  - docker run -e CI=true ragssb/docker-react npm run test
