--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true ragssb/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "Docker-React"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-553914605093"
+  bucket_path: "Docker-React"
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_acesss_key: "$AWS_SECRET_KEY"
